<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    tools:context=".apresentation.details.DetailsActivity">

   <include layout="@layout/include_toolbar" />

    <ViewFlipper
        android:id="@+id/viewFlipperPokemonDetails"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <ProgressBar
                android:layout_width="68dp"
                android:layout_height="65dp" />
        </LinearLayout>

        <!-- LayoutPrincipal -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimaryDark"
                android:orientation="vertical"
                android:paddingLeft="10dp"
                android:paddingTop="10dp"
                android:paddingRight="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@android:color/white"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <ImageView
                            android:id="@+id/imgPokemon"
                            android:layout_width="match_parent"
                            android:layout_height="201dp"
                            android:padding="10dp"
                            app:srcCompat="@drawable/picture_120px" />

                        <TextView
                            android:id="@+id/txtNameProkemon"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center_horizontal"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="30sp" />
                    </LinearLayout>

                </androidx.cardview.widget.CardView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:cardBackgroundColor="@android:color/white"
                    app:cardCornerRadius="5dp"
                    app:cardElevation="6dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtLabelPeso"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/LabelWeight"
                                android:textColor="@color/textColorPrimary"
                                android:textSize="20sp"
                                tools:text="@string/LabelWeight" />

                            <TextView
                                android:id="@+id/txtWeight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="9"
                                android:textColor="@color/textColorSecondary"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/txtLavelAltura"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:text="@string/LavelHeight"
                                android:textColor="@color/textColorPrimary"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/txtHeight"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_weight="9"
                                android:textColor="@color/textColorSecondary"
                                android:textSize="20sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtLabelTypes"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:text="@string/LabelType"
                                android:textColor="@color/textColorPrimary"
                                android:textSize="20sp"
                                tools:text="@string/LabelType" />

                            <TextView
                                android:id="@+id/txtType"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/textColorSecondary"
                                android:textSize="20sp" />
                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/txtLabelAbilidade"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="5dp"
                                android:text="@string/LabelHabilidades"
                                android:textColor="@color/textColorPrimary"
                                android:textSize="20sp"
                                tools:text="@string/LabelHabilidades" />

                            <TextView
                                android:id="@+id/txtHabilidades"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@color/textColorSecondary"
                                android:textSize="20sp" />
                        </LinearLayout>

                        <TextView
                            android:id="@+id/txtLabelMovimento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="@string/LavelMovimentos"
                            android:textColor="@color/textColorPrimary"
                            android:textSize="20sp" />

                        <androidx.core.widget.NestedScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@drawable/custom_border"
                            android:fillViewport="true"
                            android:padding="5dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:orientation="vertical">

                                <TextView
                                    android:id="@+id/txtMovimentos"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textColor="@color/textColorSecondary"
                                    android:textSize="20sp" />

                            </LinearLayout>
                        </androidx.core.widget.NestedScrollView>

                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </LinearLayout>

        <!-- END LayoutPrincipal -->

        <TextView
            android:id="@+id/txtMessegerErroDetails"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="30sp"
            tools:text="TextView" />


    </ViewFlipper>


</LinearLayout>